<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.ui.pokemonSpecies.PokemonSpeciesFragment">


    <TextView
        android:id="@+id/tv_pokemon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/pokemon_name" />

    <TextView
        android:id="@+id/tv_pokemon_species"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:text="@string/tv_felicidad_base"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name"/>

    <TextView
        android:id="@+id/tv_pokemon_species_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:text="70"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name"
        app:layout_constraintStart_toEndOf="@+id/tv_pokemon_species" />


    <TextView
        android:id="@+id/tv_pokemon_captura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:text="@string/tv_tasa_captura"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_species"/>

    <TextView
        android:id="@+id/tv_pokemon_captura_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:text="45"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_species_value"
        app:layout_constraintStart_toEndOf="@+id/tv_pokemon_captura" />

    <TextView
        android:id="@+id/tv_pokemon_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:text="@string/tv_tasa_captura"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_captura"/>

    <TextView
        android:id="@+id/tv_pokemon_color_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:text="Red"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_captura_value"
        app:layout_constraintStart_toEndOf="@+id/tv_pokemon_color" />


    <TextView
        android:id="@+id/tv_pokemon_group_of_eggs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:text="@string/tv_grupos_de_huevos"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_color"/>

    <TextView
        android:id="@+id/tv_pokemon_group_of_eggs_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:text="Monster, dragon"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_color_value"
        app:layout_constraintStart_toEndOf="@+id/tv_pokemon_group_of_eggs" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_habilidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_habilidades"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_linea_evolutiva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_habilidades"
        android:text="@string/btn_linea_evolutiva"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>